--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -2,16 +2,22 @@
   "name": "react-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "@material-ui/core": "^4.4.3"
   },
   "scripts": {
+    "clean": "rm -rf build dist",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "package": "npm run build && mkdir -p dist && cd build && zip -r -X ../dist/app.zip . && cd ..",
+    "install": "npm run package && ./mvnw install:install-file -Dfile=dist/app.zip -DgroupId=com.instantor.dap -DartifactId=$npm_package_name -Dversion=$npm_package_version -Dpackaging=zip",
+    "stubs": "docker run --rm -e \"STUBRUNNER_STUBS_MODE=LOCAL\" -v $HOME/.m2:/root/.m2:ro -e \"STUBRUNNER_IDS=com.instantor.dap:spring-boot-backend:+:stubs:8080\" -e \"SERVER_PORT=9876\" -p \"9876:9876\" -p \"8080:8080\" springcloud/spring-cloud-contract-stub-runner:2.1.3.RELEASE"
   },
   "eslintConfig": {
     "extends": "react-app"
